--- a/src/components/task-details-page2/taskdetail.css
+++ b/src/components/task-details-page2/taskdetail.css
@@ -1,21 +1,9 @@
 
-* {
-    box-sizing: border-box;
-    height:100%;
-}
 
 .main{
-     margin-top: 100px;
-    margin-bottom: 100px;
-    display: grid;
-    grid-template-areas:
-        "taskinfo taskinfo"
-        "taskdescription rating";
-
-    grid-template-columns: 3fr 1fr;
-     grid-template-rows: 1fr 3fr;
-
-    gap: 1em;
+    margin-left: 50%;
+    margin-top: 300px;
+    background-color: green;
 
 }
 .taskinfo{
