--- a/src/components/rating/index.css
+++ b/src/components/rating/index.css
@@ -5,3 +5,10 @@
 .rating-heading {
     font-size: 1.3em;
 }
+.rating-icon {
+
+/* margin-left: 1.5em; */
+text-align: center;
+margin-bottom: 2em;
+
+}
