--- a/src/components/basic-detail/index.css
+++ b/src/components/basic-detail/index.css
@@ -45,12 +45,20 @@
     margin-bottom: 1em;
   }
 
-  .download {
+  .vl {
     border-left: 0.2em solid rgb(30, 102, 204);
     height: 7em;
+    padding-left: 2em;  
     margin-top: 2em;
     margin-bottom: 2em;
-    padding-left: 2em;
+  }
+
+  .download {
+    /* border-left: 0.2em solid rgb(30, 102, 204); */
+    /* height: 7em; */
+    margin-top: 2em;
+    margin-bottom: 2em;
+    /* padding-left: 2em; */
   }
 
   .heading {
@@ -68,3 +76,30 @@
   .star {
     margin-left: 3em;
   }
+
+  @media screen and (max-width: 750px){
+    .avatar{
+      margin:0 auto;
+      margin-top: 1em;
+      margin-bottom: 0.5em;
+    }
+    .data{
+      margin-left: 2em;
+      margin-top: 0em;
+      margin-bottom: 0em;
+    }
+    .vl{
+      transform: translate(14em) rotate(90deg) scale(1,3.7);
+      width: 4em;
+      margin-left: 1em;
+      margin-right: 3em;
+      height: 8em;
+      margin-bottom: 0em;
+      padding-left: 2em;
+      
+    }
+    .download{
+      margin-left: 1em;
+    }
+    
+  } 
