--- a/src/components/filter/filter.css
+++ b/src/components/filter/filter.css
@@ -1,9 +1,9 @@
 .filter-size{
-    background-color:white;
-    text-align: center;
-    height: 1000%;
-    width: 100%;
-    padding-left: 3em;
-    margin-right: 10em;
-    padding-top: 10em;
+
+    /* background-color:white; */
+    /* text-align: center; */
+    /* padding-left: 3em; */
+    margin-left: 0.5em;
+    /* padding-top: 10em; */
+    
 }
