--- a/src/components/task-container/index.css
+++ b/src/components/task-container/index.css
@@ -1,4 +1,5 @@
 .block{
-    margin-right: 10em;
-    margin-left: 5em;
+    /* margin-right: 7em; */
+    margin-left: 10em;
+    min-width: 80em;
 }
