updated home page and filter

--- a/src/components/main/index.css
+++ b/src/components/main/index.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     box-sizing: border-box;
 }
 
@@ -14,12 +14,13 @@
         "filter  task-card-container"
         "footer footer";
     grid-template-columns: 1fr 6fr;
-    gap: 1em;
+    gap: 1em;   
 }
 
 .main>div {
     padding: 1em;
     background-color: lightgray;
+    
 }
 
 .task-card {
@@ -54,7 +55,7 @@
 
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
-    .main {
+    /* .main {
         display: grid;
         grid-template-areas:
             "navbar"
@@ -65,4 +66,8 @@
         grid-template-columns: 1fr;
         gap: 1em;
     }
+} */ */
+
+.header{
+    background-color: #EDEDED;
 }
