--- a/src/components/basic-detail/index.css
+++ b/src/components/basic-detail/index.css
@@ -101,5 +101,8 @@
     .download{
       margin-left: 1em;
     }
-    
+    .badge{
+      padding-right: '0.5em';
+      padding-top: '0.5em';
+    }  
   } 
