--- a/src/components/rating/index.css
+++ b/src/components/rating/index.css
@@ -1,6 +1,11 @@
 .ok-icon {
     margin-right: 1em;
 }
+.blur-rating{
+  filter: blur(2px);
+  -webkit-filter: blur(2px);
+  z-index: -8;
+}
 
 .rating-heading {
     font-size: 1.3em;
