added clipboard icon and functionality for copy task installation command

--- a/src/components/basic-detail/index.css
+++ b/src/components/basic-detail/index.css
@@ -63,7 +63,7 @@
   }
 
   .button {
-    width: auto;
+    width: 10em;
   }
 
   .star {
@@ -89,8 +89,43 @@
     }  
   } 
 
-  .-pf-c-modal-box--Zindex{
-    
-    z-index: 100;
-   
-  }
+
+
+
+/*      ------ moal   */
+
+.modal {
+  font-size: 20px;
+}
+.modal > .header {
+  width: 100%;
+  border-bottom: 1px solid gray;
+  font-size: 45px;
+  color: blue;
+  text-align: left;
+  padding-left: 0.5em;
+  padding-top : 0.5em;
+}
+.modal > .content {
+  width: 100%;
+  padding: 10px 5px;
+}
+.modal > .actions {
+  width: 100%;
+  padding: 10px 5px;
+  margin: auto;
+  text-align: center;
+}
+.modal > .close {
+  cursor: pointer;
+  position: absolute;
+  display: block;
+  padding: 2px 5px;
+  line-height: 20px;
+  right: 10px;
+  top: 10px;
+  font-size: 24px;
+  background: #ffffff;
+  /* border-radius: 18px; */
+  border: 1px solid #cfcece;
+}
