--- a/src/components/rating/index.css
+++ b/src/components/rating/index.css
@@ -38,7 +38,7 @@
     overflow: hidden;
     white-space: nowrap;
     cursor: pointer;
-    font-size: 350%;
+    font-size: 250%;
     line-height: 1.2;
     color: lightgrey;
     text-shadow: 1px 1px #bbb;
@@ -49,7 +49,7 @@
   .rate-area > input:checked ~ label {
     color: gold;
     text-shadow: 1px 1px #c60;
-    font-size: 350% !important;
+    font-size: 250% !important;
   }
   
   .rate-area:not(:checked) > label:hover, .rate-area:not(:checked) > label:hover ~ label { color: gold; }
@@ -64,3 +64,12 @@
     top: 2px;
     left: 2px;
   }
+
+  .numberCircle {
+    width: 40px;
+    line-height: 40px;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 16px;
+    border: 2px solid #666;
+}
