--- a/src/components/filter/filter.css
+++ b/src/components/filter/filter.css
@@ -4,6 +4,7 @@
     /* text-align: center; */
     /* padding-left: 3em; */
     margin-left: 3em;
+    margin-top: -50em;
     /* padding-top: 10em; */
     
 }
