--- a/src/components/filter/filter.css
+++ b/src/components/filter/filter.css
@@ -4,7 +4,8 @@
     /* text-align: center; */
     /* padding-left: 3em; */
     margin-left: 3em;
-    margin-top: -50em;
+    margin-top:1em;
+    /* margin-top: -150em; */
     /* padding-top: 10em; */
     
 }
