--- a/src/components/task/index.css
+++ b/src/components/task/index.css
@@ -3,6 +3,10 @@
     /* border-left:0.1em solid rgb(30,102,204); */
 }
 
+.box:hover{
+    box-shadow: 0 0 11px rgba(33,33,33,.2); 
+}
+
 .exampleBorder {
     margin: 1em;
 }
@@ -64,6 +68,7 @@ background-color : #B8AD8B;
 margin-left: 12em;
 color : white;
 padding-top: .1em;
+border-top-right-radius: 0.3em;
 }
 a{
     text-decoration: none;
